# PA

lab1/: CMakeLists.txt  bench_out.csv  run_perf.sh  run_tests.sh
lab1/perf/: benchmark.cpp
lab1/src/: utils.hpp
lab1/src/par/: quicksort.hpp
lab1/src/seq/: quicksort.hpp
lab1/tests/: test.cpp
lab2/: CMakeLists.txt  run_perf.sh  run_test.sh
lab2/perf/: benchmark.cpp
lab2/src/: bfs.hpp  utils.hpp
lab2/tests/: test.cpp
